--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.5.1/katex.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/hinesboy/mavonEditor@2.9.1/dist/css/index.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vuetify@2.4.4/dist/vuetify.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/nprogress@0.2.0/nprogress.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/github-markdown-css/github-markdown.css">
     <style>
       .markdown-body pre code {
         background-color: #00000000 !important;
