--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,13 @@
       .markdown-body pre code {
         background-color: #00000000 !important;
       }
+      .link {
+        color: black !important;
+        text-decoration: none !important;
+      }
+      .link:hover {
+        color: rgb(141, 141, 141) !important;
+      }
     </style>
     <title>RookieWiki</title>
   </head>
