--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="<%= BASE_URL %>favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.5.0/build/styles/default.min.css">
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="<%= BASE_URL %>katex.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/KaTeX/KaTeX@0.5.1/dist/katex.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/hinesboy/mavonEditor@2.9.1/dist/css/index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vuetify@2.4.4/dist/vuetify.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/nprogress@0.2.0/nprogress.css">
